// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field with a  number input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx1up9i {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-2);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx1up9i:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx1up9i[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sxd964z {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxd964zjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxd964zjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxd964zjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxd964z-b2uuy {
  margin-bottom: var(--space-2);
}

<div>
  <div
    class="sx03kze sx03kze-6obnf"
  >
    <label
      class="sxd964z sxd964zjqqvr--size-md sxd964z-b2uuy"
      for="INPUT FIELD"
    >
      INPUT FIELD
    </label>
    <input
      class="sx1up9i"
      id="INPUT FIELD"
      inputmode="numeric"
      name="INPUT FIELD"
      pattern="[0-9]*"
      placeholder="001"
      type="text"
    />
  </div>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx1up9i {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-2);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx1up9i:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx1up9i[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sxd964z {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxd964zjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxd964zjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxd964zjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxd964z-b2uuy {
  margin-bottom: var(--space-2);
}

<div>
  <div
    class="sx03kze sx03kze-6obnf"
  >
    <label
      class="sxd964z sxd964zjqqvr--size-md sxd964z-b2uuy"
      for="INPUT FIELD"
    >
      INPUT FIELD
    </label>
    <input
      class="sx1up9i"
      id="INPUT FIELD"
      name="INPUT FIELD"
      placeholder="INPUT FIELD"
      type="text"
    />
  </div>
</div>
`;
